--- a/app.json
+++ b/app.json
@@ -34,7 +34,15 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-font"
+      "expo-font",
+      [
+        "@sentry/react-native/expo",
+        {
+          "url": "https://sentry.io/",
+          "project": "reactnative_food_ordering",
+          "organization": "wwok"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
